syntax = "proto3";
message UserDetail {
    string email = 1;
    string name = 2;
    UserStatus status = 3;
}
enum UserStatus {
    Unknown = 0;
    Login = 1;
    Expired = 2;
}
