syntax = "proto3";

message UpdateUserRequest {
    string id = 1;
    oneof one_of_name { string name = 2; };
    oneof one_of_email { string email = 3; };
    oneof one_of_password { string password = 4; };
}
message UpdateUserParams {
    string id = 1;
    oneof one_of_name { string name = 2; };
    oneof one_of_email { string email = 3; };
    oneof one_of_password { string password = 4; };
}
